welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:6: error: ')' expected but ';' found.
while(!estFaceMur;x!=="S") { avance();
                 ^Runner:6: error: ';' expected but ')' found.
while(!estFaceMur;x!=="S") { avance();
                         ^